[package]
name = "rust-playground"
version = "0.1.0"
authors = ["Rickey Bowers Jr. <bitRAKE@gmail.com>"]
edition = "2021"
description = "Try some stuff with Rust."
license = "Apache-2.0 OR MIT"
readme = "README.md"
keywords = ["Windows", "playground"]
categories = ["other"]
repository = "https://github.com/bitRAKE/rust-playground"
homepage = "https://github.com/bitRAKE"
publish = false
default-run = "conapi_asm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.winapi]
version = "0.3.9"
features = [
	"consoleapi",
	"handleapi",
	"heapapi",
	"winuser",
	"processthreadsapi",
	"fileapi",
	"processenv",
	"winbase",
]

[profile.release]
debug-assertions = false
overflow-checks = false
panic = 'abort'
strip = true
lto = true
codegen-units = 1
opt-level = "z"
